# gpt-5.5-c--qt-game-3d

./: CMakeLists.txt  LICENSE  README.md
src/: GameWidget.cpp  GameWidget.h  main.cpp
